--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -41,66 +41,66 @@
     </tr>
     <tr>
         <td>
-            <button class="touche main" onclick="gui.touche('main', 'vert')">
+            <button class="touche main" disabled="disabled" onclick="gui.touche('main', 'vert')">
                 <img alt="touche main" src="images/main.svg" title="touche main"/>
             </button>
-            <button class="touche bras" onclick="gui.touche('bras', 'vert')">
+            <button class="touche bras" disabled="disabled" onclick="gui.touche('bras', 'vert')">
                 <img alt="touche bras" src="images/bras.svg" title="touche bras"/>
             </button>
-            <button class="touche jambe" onclick="gui.touche('jambe', 'vert')">
+            <button class="touche jambe" disabled="disabled" onclick="gui.touche('jambe', 'vert')">
                 <img alt="touche jambe" src="images/jambe.svg" title="touche jambe"/>
             </button>
-            <button class="touche tronc" onclick="gui.touche('tronc', 'vert')">
+            <button class="touche tronc" disabled="disabled" onclick="gui.touche('tronc', 'vert')">
                 <img alt="touche tronc" src="images/tronc.svg" title="touche tronc"/>
             </button>
-            <button class="touche tête" onclick="gui.touche('tête', 'vert')">
+            <button class="touche tête" disabled="disabled" onclick="gui.touche('tête', 'vert')">
                 <img alt="touche tête" src="images/tete.svg" title="touche tête"/>
             </button>
         </td>
         <td>
-            <button class="touche main" onclick="gui.touche('main', 'rouge')">
+            <button class="touche main" disabled="disabled" onclick="gui.touche('main', 'rouge')">
                 <img alt="touche main" src="images/main.svg" title="touche main"/>
             </button>
-            <button class="touche bras" onclick="gui.touche('bras', 'rouge')">
+            <button class="touche bras" disabled="disabled" onclick="gui.touche('bras', 'rouge')">
                 <img alt="touche bras" src="images/bras.svg" title="touche bras"/>
             </button>
-            <button class="touche jambe" onclick="gui.touche('jambe', 'rouge')">
+            <button class="touche jambe" disabled="disabled" onclick="gui.touche('jambe', 'rouge')">
                 <img alt="touche jambe" src="images/jambe.svg" title="touche jambe"/>
             </button>
-            <button class="touche tronc" onclick="gui.touche('tronc', 'rouge')">
+            <button class="touche tronc" disabled="disabled" onclick="gui.touche('tronc', 'rouge')">
                 <img alt="touche tronc" src="images/tronc.svg" title="touche tronc"/>
             </button>
-            <button class="touche tête" onclick="gui.touche('tête', 'rouge')">
+            <button class="touche tête" disabled="disabled" onclick="gui.touche('tête', 'rouge')">
                 <img alt="touche tête" src="images/tete.svg" title="touche tête"/>
             </button>
         </td>
     </tr>
     <tr>
         <td>
-            <button class="carton blanc" onclick="gui.carton('blanc', 'vert')">
+            <button class="carton blanc" disabled="disabled" onclick="gui.carton('blanc', 'vert')">
                 <img alt="carton blanc" src="images/carton-blanc.svg" title="carton blanc"/>
             </button>
-            <button class="carton jaune" onclick="gui.carton('jaune', 'vert')">
+            <button class="carton jaune" disabled="disabled" onclick="gui.carton('jaune', 'vert')">
                 <img alt="carton jaune" src="images/carton-jaune.svg" title="carton jaune"/>
             </button>
-            <button class="carton rouge" onclick="gui.carton('rouge', 'vert')">
+            <button class="carton rouge" disabled="disabled" onclick="gui.carton('rouge', 'vert')">
                 <img alt="carton rouge" src="images/carton-rouge.svg" title="carton rouge"/>
             </button>
-            <button class="carton noir" onclick="gui.carton('noir', 'vert')">
+            <button class="carton noir" disabled="disabled" onclick="gui.carton('noir', 'vert')">
                 <img alt="carton noir" src="images/carton-noir.svg" title="carton noir"/>
             </button>
         </td>
         <td>
-            <button class="carton blanc" onclick="gui.carton('blanc', 'rouge')">
+            <button class="carton blanc" disabled="disabled" onclick="gui.carton('blanc', 'rouge')">
                 <img alt="carton blanc" src="images/carton-blanc.svg" title="carton blanc"/>
             </button>
-            <button class="carton jaune" onclick="gui.carton('jaune', 'rouge')">
+            <button class="carton jaune" disabled="disabled" onclick="gui.carton('jaune', 'rouge')">
                 <img alt="carton jaune" src="images/carton-jaune.svg" title="carton jaune"/>
             </button>
-            <button class="carton rouge" onclick="gui.carton('rouge', 'rouge')">
+            <button class="carton rouge" disabled="disabled" onclick="gui.carton('rouge', 'rouge')">
                 <img alt="carton rouge" src="images/carton-rouge.svg" title="carton rouge"/>
             </button>
-            <button class="carton noir" onclick="gui.carton('noir', 'rouge')">
+            <button class="carton noir" disabled="disabled" onclick="gui.carton('noir', 'rouge')">
                 <img alt="carton noir" src="images/carton-noir.svg" title="carton noir"/>
             </button>
         </td>
