--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -23,7 +23,7 @@
 <table style="width:100%">
     <thead>
     <tr>
-        <th colspan="2" id="message">Prêt?</th>
+        <th colspan="2"><div id="message">Prêt?</div></th>
     </tr>
     <tr>
         <th><span class="vertCombattant">Vert</span></th>
