--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -23,7 +23,9 @@
 <table style="width:100%">
     <thead>
     <tr>
-        <th colspan="2"><div id="message">Prêt?</div></th>
+        <th colspan="2">
+            <div id="message">Prêt?</div>
+        </th>
     </tr>
     <tr>
         <th><span class="vertCombattant">Vert</span></th>
@@ -115,11 +117,11 @@
 <script src="Evenement.js"></script>
 <script src="EventLog.js"></script>
 <script src="Regle.js"></script>
-<script src="regles.js"></script>
 <script src="MortSubite.js"></script>
 <script src="MatchState.js"></script>
 <script src="MatchModel.js"></script>
 <script src="Gui.js"></script>
+<script src="tests.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
