--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -9,17 +9,6 @@
     <title>Sabre laser - match</title>
 </head>
 <body class="dark">
-<span id="time">00:00</span>
-<button id="play" onclick="gui.play()">
-    <img alt="démarrer le combat" src="images/play.svg" title="démarrer le combat"/>
-</button>
-<button id="reset" onclick="gui.reset()">
-    <img alt="Nouveau combat" src="images/light-sabers-couleur.svg" title="Nouveau combat"/>
-</button>
-<button onclick="gui.annuler()">
-    <img alt="Supprimer la dernière action" src="images/abort.svg" title="Supprimer la dernière action"/>
-</button>
-<!--  <div id="lightsaber"><span id="light"></span></div>-->
 <div>
     <span id="time">00:00</span>
     <button id="play" onclick="gui.play()">
@@ -43,12 +32,13 @@
 <table style="width:100%">
     <thead>
     <tr>
-        <th colspan="2">
+        <th colspan="3">
             <div id="message">Prêt?</div>
         </th>
     </tr>
     <tr>
         <th><span class="vertCombattant">Vert</span></th>
+        <th></th>
         <th><span class="rougeCombattant">Rouge</span></th>
     </tr>
     </thead>
@@ -56,6 +46,9 @@
     <tr>
         <td id="scoreVert">
             0
+        </td>
+        <td id="lightsaberTd" rowspan="3">
+            <div id="lightsaber"><span id="light"></span></div>
         </td>
         <td id="scoreRouge">
             0
