timer to count down

--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -10,7 +10,7 @@
 </head>
 <body class="dark">
 <div>
-    <span id="time">00:00</span>
+    <div id="time">00:00</div>
     <button id="play" onclick="gui.play()">
         <img alt="démarrer le combat" src="images/play.svg" title="démarrer le combat"/>
     </button>
@@ -55,70 +55,12 @@
         </td>
     </tr>
     <tr>
-        <td>
-            <button class="touche main" disabled="disabled" onclick="gui.touche('main', 'vert')">
-                <img alt="touche main" src="images/main.svg" title="touche main"/>
-            </button>
-            <button class="touche bras" disabled="disabled" onclick="gui.touche('bras', 'vert')">
-                <img alt="touche bras" src="images/bras.svg" title="touche bras"/>
-            </button>
-            <button class="touche jambe" disabled="disabled" onclick="gui.touche('jambe', 'vert')">
-                <img alt="touche jambe" src="images/jambe.svg" title="touche jambe"/>
-            </button>
-            <button class="touche tronc" disabled="disabled" onclick="gui.touche('tronc', 'vert')">
-                <img alt="touche tronc" src="images/tronc.svg" title="touche tronc"/>
-            </button>
-            <button class="touche tête" disabled="disabled" onclick="gui.touche('tête', 'vert')">
-                <img alt="touche tête" src="images/tete.svg" title="touche tête"/>
-            </button>
-        </td>
-        <td>
-            <button class="touche main" disabled="disabled" onclick="gui.touche('main', 'rouge')">
-                <img alt="touche main" src="images/main.svg" title="touche main"/>
-            </button>
-            <button class="touche bras" disabled="disabled" onclick="gui.touche('bras', 'rouge')">
-                <img alt="touche bras" src="images/bras.svg" title="touche bras"/>
-            </button>
-            <button class="touche jambe" disabled="disabled" onclick="gui.touche('jambe', 'rouge')">
-                <img alt="touche jambe" src="images/jambe.svg" title="touche jambe"/>
-            </button>
-            <button class="touche tronc" disabled="disabled" onclick="gui.touche('tronc', 'rouge')">
-                <img alt="touche tronc" src="images/tronc.svg" title="touche tronc"/>
-            </button>
-            <button class="touche tête" disabled="disabled" onclick="gui.touche('tête', 'rouge')">
-                <img alt="touche tête" src="images/tete.svg" title="touche tête"/>
-            </button>
-        </td>
+        <td id="touchesVert"></td>
+        <td id="touchesRouge"></td>
     </tr>
     <tr>
-        <td>
-            <button class="carton blanc" disabled="disabled" onclick="gui.carton('blanc', 'vert')">
-                <img alt="carton blanc" src="images/carton-blanc.svg" title="carton blanc"/>
-            </button>
-            <button class="carton jaune" disabled="disabled" onclick="gui.carton('jaune', 'vert')">
-                <img alt="carton jaune" src="images/carton-jaune.svg" title="carton jaune"/>
-            </button>
-            <button class="carton rouge" disabled="disabled" onclick="gui.carton('rouge', 'vert')">
-                <img alt="carton rouge" src="images/carton-rouge.svg" title="carton rouge"/>
-            </button>
-            <button class="carton noir" disabled="disabled" onclick="gui.carton('noir', 'vert')">
-                <img alt="carton noir" src="images/carton-noir.svg" title="carton noir"/>
-            </button>
-        </td>
-        <td>
-            <button class="carton blanc" disabled="disabled" onclick="gui.carton('blanc', 'rouge')">
-                <img alt="carton blanc" src="images/carton-blanc.svg" title="carton blanc"/>
-            </button>
-            <button class="carton jaune" disabled="disabled" onclick="gui.carton('jaune', 'rouge')">
-                <img alt="carton jaune" src="images/carton-jaune.svg" title="carton jaune"/>
-            </button>
-            <button class="carton rouge" disabled="disabled" onclick="gui.carton('rouge', 'rouge')">
-                <img alt="carton rouge" src="images/carton-rouge.svg" title="carton rouge"/>
-            </button>
-            <button class="carton noir" disabled="disabled" onclick="gui.carton('noir', 'rouge')">
-                <img alt="carton noir" src="images/carton-noir.svg" title="carton noir"/>
-            </button>
-        </td>
+        <td id="cartonsVert"></td>
+        <td id="cartonsRouge"></td>
     </tr>
     </tbody>
 </table>
