--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -6,7 +6,7 @@
     <link href="manifest.json" rel="manifest"/>
     <link href="images/light-sabers-couleur.svg" rel="icon" type="image/svg+xml"/>
     <link href="style.css" rel="stylesheet"/>
-    <title>Sabre laser - match</title>
+    <title>Match sabre laser</title>
 </head>
 <body class="dark">
 <div>
