move files to src

--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -9,6 +9,6 @@
     <title>Page Redirection</title>
 </head>
 <body>
-La page a été déplacée vers <a href='index.html'>index.html</a>.
+La page a été déplacée vers <a href='src/index.html'>index.html</a>.
 </body>
 </html>
