--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta content="0; url=index.html" http-equiv="refresh">
+    <meta content="0; url=src/index.html" http-equiv="refresh">
     <script type="text/javascript">
-        window.location.href = "index.html"
+        window.location.href = "src/index.html"
     </script>
     <title>Page Redirection</title>
 </head>
 <body>
-La page a été déplacée vers <a href='src/index.html'>index.html</a>.
+La page a été déplacée vers <a href='src/index.html'>src/index.html</a>.
 </body>
 </html>
