fix background lightsaber

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>Match sabre laser</title>
 </head>
 <body class="dark">
+<div id="background-image"></div>
 <div>
     <div id="time">00:00</div>
     <button id="play" onclick="gui.play()" style="display: inline-block">
