--- a/src/index.html
+++ b/src/index.html
@@ -68,12 +68,41 @@
     </div>
     Décompte des points d'un match de sabre laser au plus proche de la
     <a href="https://www.ffescrime.fr/media-documents/?thematic=sabre-laser">FFE</a>.<br/>
-    <div>
+    <div style="align-content: center; text-align: center">
         <label for="changeRegle">Règles:</label>
         <select id="changeRegle" onchange="gui.changeRegle()">
             <option value="FFE">FFE</option>
             <option value="testing">testing</option>
         </select>
+        <div>
+            Modification de la règle personnalisée:<br/>
+            <table style="display: inline-table">
+                <tr>
+                    <td><label for="duree">Durée du match (sec)</label></td>
+                    <td><input id="duree" max="1200" min="5" onchange="gui.changeValeurRegles(this)" step="5"
+                               type="number"
+                               value="180"/></td>
+                </tr>
+                <tr>
+                    <td><label for="prolongation">Durée de la prolongation (sec)</label></td>
+                    <td><input id="prolongation" max="180" min="0" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number"
+                               value="30"/></td>
+                </tr>
+                <tr>
+                    <td><label for="mortSubiteScore">Score mort subite</label></td>
+                    <td><input id="mortSubiteScore" max="100" min="0" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number"
+                               value="10"/></td>
+                </tr>
+                <tr>
+                    <td><label for="scoreMax">Score gagnant</label></td>
+                    <td><input id="scoreMax" max="100" min="1" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number"
+                               value="15"/></td>
+                </tr>
+            </table>
+        </div>
     </div>
     <br/>
     Les sources sont dispo <a href="https://github.com/yannickbattail/sabre-laser-match">ici</a>.<br/>
