--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             <option value="testing">testing</option>
         </select>
         <div>
-            Modification de la règle personnalisée:<br/>
+            Modification de la règle "personnalisée":<br/>
             <table style="display: inline-table">
                 <tr>
                     <td><label for="duree">Durée du match (sec)</label></td>
