add carton rule editing

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,31 @@
                                type="number" value="5"/>
                     </td>
                 </tr>
+                <tr>
+                    <td>Cartons</td>
+                    <td>
+                        <label for="carton_blanc">
+                            <img alt="carton blanc" src="images/carton-blanc.svg" title="carton blanc"/>
+                        </label>
+                        <input id="carton_blanc" max="100" min="1" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number" value="0"/>
+                        <label for="carton_jaune">
+                            <img alt="carton jaune" src="images/carton-jaune.svg" title="carton jaune"/>
+                        </label>
+                        <input id="carton_jaune" max="100" min="1" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number" value="3"/>
+                        <label for="carton_rouge">
+                            <img alt="carton rouge" src="images/carton-rouge.svg" title="carton rouge"/>
+                        </label>
+                        <input id="carton_rouge" max="100" min="1" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number" value="5"/>
+                        <label for="carton_noir">
+                            <img alt="carton noir" src="images/carton-noir.svg" title="carton noir"/>
+                        </label>
+                        <input id="carton_noir" max="100" min="1" onchange="gui.changeValeurRegles(this)" step="1"
+                               type="number" value="0"/>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
